Refine TokenUsageBar Tooltips: Prioritize Warnings, Disable Segment Details (#1775)
* refactor: Improve TokenUsageBar tooltip logic

* refactor: Remove unused tooltip helper methods in TokenUsageBar

* refactor: Improve tooltip behavior in TokenUsageBar

* refactor: Improve TokenUsageBar tooltip handling

* fix: Suppress tooltip when mouse is over a filled segment in TokenUsageBar